<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HowToPlayActivity"
    android:background="@color/logo_blue">

    <TextView
        android:id="@+id/titleHTPTextView"
        android:layout_width="325dp"
        android:layout_height="59dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/txt"
        android:fontFamily="@font/bromine"
        android:gravity="center"
        android:text="@string/how_to_play_btn_text"
        android:textColor="@android:color/black"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/hTPScrollView"
        android:layout_width="334dp"
        android:layout_height="401dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleHTPTextView">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/innerHTPLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/rule1TV"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/txt"
                android:fontFamily="@font/bromine"
                android:gravity="center"
                android:text="@string/rule1"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rule2TV"
                android:layout_width="317dp"
                android:layout_height="79dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/txt"
                android:fontFamily="@font/bromine"
                android:gravity="center"
                android:text="@string/rule2"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rule1TV" />


            <TextView
                android:id="@+id/rule3TV"
                android:layout_width="317dp"
                android:layout_height="74dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/txt"
                android:fontFamily="@font/bromine"
                android:gravity="center"
                android:text="@string/rule3"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rule2TV" />

            <TextView
                android:id="@+id/rule4TV"
                android:layout_width="322dp"
                android:layout_height="73dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/txt"
                android:fontFamily="@font/bromine"
                android:gravity="center"
                android:text="@string/rule4"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rule3TV" />

            <TextView
                android:id="@+id/cardrule1TV"
                android:layout_width="325dp"
                android:layout_height="96dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/txt"
                android:fontFamily="@font/bromine"
                android:gravity="center"
                android:text="@string/card_rule1"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rule4TV" />

            <TextView
                android:id="@+id/cardrule2TV"
                android:layout_width="318dp"
                android:layout_height="80dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/txt"
                android:fontFamily="@font/bromine"
                android:gravity="center"
                android:text="@string/card_rule2"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardrule1TV" />

            <TextView
                android:id="@+id/cardrule3TV"
                android:layout_width="316dp"
                android:layout_height="95dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/txt"
                android:fontFamily="@font/bromine"
                android:gravity="center"
                android:text="@string/card_rule3"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardrule2TV" />

            <TextView
                android:id="@+id/cardrule4TV"
                android:layout_width="318dp"
                android:layout_height="80dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/txt"
                android:fontFamily="@font/bromine"
                android:gravity="center"
                android:text="@string/card_rule4"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardrule3TV" />


            <TextView
                android:id="@+id/cardrule5TV"
                android:layout_width="318dp"
                android:layout_height="80dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/txt"
                android:fontFamily="@font/bromine"
                android:gravity="center"
                android:text="@string/card_rule5"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardrule4TV" />

            <TextView
                android:id="@+id/cardrule6TV"
                android:layout_width="318dp"
                android:layout_height="100dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/txt"
                android:fontFamily="@font/bromine"
                android:gravity="center"
                android:text="@string/card_rule6"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardrule5TV" />

            <TextView
                android:id="@+id/cardrule7TV"
                android:layout_width="318dp"
                android:layout_height="100dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/txt"
                android:fontFamily="@font/bromine"
                android:gravity="center"
                android:text="@string/card_rule7"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardrule6TV" />

            <TextView
                android:id="@+id/cardrule8TV"
                android:layout_width="318dp"
                android:layout_height="120dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/txt"
                android:fontFamily="@font/bromine"
                android:gravity="center"
                android:text="@string/card_rule8"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardrule7TV" />


            <TextView
                android:id="@+id/cardrule9TV"
                android:layout_width="318dp"
                android:layout_height="140dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/txt"
                android:fontFamily="@font/bromine"
                android:gravity="center"
                android:text="@string/card_rule9"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardrule8TV" />


            <TextView
                android:id="@+id/cardrule10TV"
                android:layout_width="318dp"
                android:layout_height="80dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/txt"
                android:fontFamily="@font/bromine"
                android:gravity="center"
                android:text="@string/card_rule10"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardrule9TV" />


            <TextView
                android:id="@+id/cardrule11TV"
                android:layout_width="318dp"
                android:layout_height="140dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/txt"
                android:fontFamily="@font/bromine"
                android:gravity="center"
                android:text="@string/card_rule11"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardrule10TV" />

            <TextView
                android:id="@+id/cardrule12TV"
                android:layout_width="318dp"
                android:layout_height="80dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/txt"
                android:fontFamily="@font/bromine"
                android:gravity="center"
                android:text="@string/card_rule12"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardrule11TV" />


            <TextView
                android:id="@+id/cardrule13TV"
                android:layout_width="318dp"
                android:layout_height="140dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/txt"
                android:fontFamily="@font/bromine"
                android:gravity="center"
                android:text="@string/card_rule13"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardrule12TV" />

            <TextView
                android:id="@+id/rule5TV"
                android:layout_width="318dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/txt"
                android:fontFamily="@font/bromine"
                android:gravity="center"
                android:text="@string/rule5"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardrule13TV" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/backToMainBtn"
        android:layout_width="115dp"
        android:layout_height="51dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn"
        android:fontFamily="@font/bromine"
        android:text="@string/back_to_main_btn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hTPScrollView" />

</android.support.constraint.ConstraintLayout>